...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verification Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaF-mG-SKa">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="55.666666666666664"/>
                                        <accessibility key="accessibilityConfiguration" identifier="verification-label-modal"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <nil key="textColor"/>
...
                                        <rect key="frame" x="0.0" y="556" width="414" height="55.333333333333371"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                        <state key="normal" title="Wide Image"/>
                                        <connections>
                                            <action selector="showWithWideImage:" destination="ttC-lg-4V1" eventType="touchUpInside" id="tOI-8R-sTB"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verification Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dlu-T5-GYf">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="111.33333333333333"/>
                                        <accessibility key="accessibilityConfiguration" identifier="verification-label-image-only"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                        <rect key="frame" x="0.0" y="111.33333333333334" width="414" height="111"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Show Regular Image Only View"/>
                                        <connections>
                                            <action selector="showRegularImageOnlyTapped:" destination="3X5-S5-3oo" eventType="touchUpInside" id="APA-1d-Y5W"/>
...
                                        <rect key="frame" x="0.0" y="222.33333333333334" width="414" height="111.33333333333334"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="High Dimension Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithNarrowImageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PLo-vX-TLK"/>
...
                                        <rect key="frame" x="0.0" y="333.66666666666669" width="414" height="111"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Low Dimension Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithLargeBodyTextTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wRK-nw-dTf"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6jV-cV-4wX">
                                        <rect key="frame" x="0.0" y="556" width="414" height="111"/>
                                        <state key="normal" title="Narrow Image"/>
                                        <connections>
                                            <action selector="showImageViewWithNarrowImage:" destination="3X5-S5-3oo" eventType="touchUpInside" id="Vrk-pH-OXv"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Image Only Messages" id="dqq-9B-dai"/>
                    <connections>
                        <outlet property="verifyLabel" destination="Dlu-T5-GYf" id="ztW-DT-gd4"/>
...
        <scene sceneID="lTf-2W-Yrp">
            <objects>
                <viewController id="7qp-KF-emt" userLabel="Card Messages" customClass="CardMessageViewController" customModule="FiamDisplaySwiftExample" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="A8k-VD-CtE"/>
...
                                        <rect key="frame" x="0.0" y="60.666666666666671" width="414" height="60.666666666666671"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Regular one button with both images"/>
                                        <connections>
                                            <action selector="showRegularOneButtonWithBothImages:" destination="7qp-KF-emt" eventType="touchUpInside" id="m1b-WU-v3c"/>
...
                                        <rect key="frame" x="0.0" y="121.33333333333336" width="414" height="60.666666666666671"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Regular one button with only portrait"/>
                                        <connections>
                                            <action selector="showRegularOneButtonWithOnlyPortrait:" destination="7qp-KF-emt" eventType="touchUpInside" id="7dE-hx-ore"/>
...
                                        <rect key="frame" x="0.0" y="182" width="414" height="60.666666666666657"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Regular two button with both images"/>
                                        <connections>
                                            <action selector="showRegularTwoButtonWithBothImages:" destination="7qp-KF-emt" eventType="touchUpInside" id="krV-Vm-XIf"/>
...
                                        <rect key="frame" x="0.0" y="242.66666666666666" width="414" height="60.666666666666657"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Long title, regular body"/>
                                        <connections>
                                            <action selector="showLongTitleRegularBody:" destination="7qp-KF-emt" eventType="touchUpInside" id="JO8-zm-m3G"/>
...
                                        <rect key="frame" x="0.0" y="303.33333333333331" width="414" height="60.333333333333314"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Regular title, long body"/>
                                        <connections>
                                            <action selector="showRegularTitleLongBody:" destination="7qp-KF-emt" eventType="touchUpInside" id="1lG-Xj-Hrw"/>
                                        </connections>
