...
                                <rect key="frame" x="44" y="59" width="294" height="222"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="image-view-in-image-only-view" label="In-app message image">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <rect key="frame" x="313" y="42" width="40" height="40"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="close-button" label="Close button"/>
                                <state key="normal" backgroundImage="close-with-transparency.png"/>
                                <connections>
...
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="message-card-view">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gB0-8W-G9z">
                                        <rect key="frame" x="0.0" y="0.0" width="240" height="160"/>
                                        <accessibility key="accessibilityConfiguration" identifier="card-image-view" label="In-app message image">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVh-9O-yfC" userLabel="Title label">
                                        <rect key="frame" x="24" y="184" width="192" height="26.333333333333343"/>
                                        <accessibility key="accessibilityConfiguration" identifier="card-title-label"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <nil key="textColor"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="192" height="38"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="card-body-text-view"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
                                        <rect key="frame" x="163" y="674" width="53" height="30"/>
                                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="card-primary-action-button"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="pxm-yD-xhm"/>
...
                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Feg-VM-j
                                        <rect key="frame" x="65" y="674" width="74" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="card-secondary-action-button"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="bpF-9w-pDe"/>
...
